[package]
name = "comics"
version = "0.1.0"
authors = ["Matthieu Dartiguenave <matthieu.dartiguenave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.10.10"
tokio = {version = "1.18.5", features = ["full"] }
